--- a/pages/ps2/ps2.html
+++ b/pages/ps2/ps2.html
@@ -130,20 +130,20 @@
       <input type="checkbox" id="menu" name="menu" class="m-menu__checkbox" checked>
 <div class="m-menu">
 <div class="m-menu__header">
-<a href="https://hv-leaf.github.io/Ch3at/pages/nintendo.html" rel="noopener noreferrer">
+<a href="https://hv-leaf.github.io/Ch3at/pages/sony.html" rel="noopener noreferrer">
   <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs">
     <path d="M19 12H6M12 5l-7 7 7 7"/>
   </svg>
 </a>
 
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
 
-<!-- nes # -->
+<!-- ps2 # -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/09.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(#)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/09.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(#)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -152,14 +152,14 @@
     </a>
     </ul>
 </li>
-<!-- End nes #-->
+<!-- End ps2 #-->
 
 
-<!-- nes a -->
+<!-- ps2 a -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/a.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(a)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/a.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(a)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -168,13 +168,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes a-->
+<!-- End ps2 a-->
 
-<!-- nes b -->
+<!-- ps2 b -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/b.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(b)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/b.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(b)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -183,13 +183,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes b-->
+<!-- End ps2 b-->
 
-<!-- nes c -->
+<!-- ps2 c -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/c.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(c)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/c.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(c)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -198,13 +198,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes c-->
+<!-- End ps2 c-->
 
-<!-- nes d -->
+<!-- ps2 d -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/d.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(d)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/d.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(d)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -213,12 +213,12 @@
     </a>
     </ul>
 </li>
-<!-- End nes d-->
-<!-- nes e -->
+<!-- End ps2 d-->
+<!-- ps2 e -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/e.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(e)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/e.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(e)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -227,13 +227,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes e-->
+<!-- End ps2 e-->
 
-<!-- nes f -->
+<!-- ps2 f -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/f.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(f)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/f.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(f)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -242,13 +242,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes f-->
+<!-- End ps2 f-->
 
-<!-- nes g -->
+<!-- ps2 g -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/g.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(g)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/g.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(g)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -257,13 +257,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes g-->
+<!-- End ps2 g-->
 
-<!-- nes h -->
+<!-- ps2 h -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/h.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(h)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/h.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(h)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -272,13 +272,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes h-->
+<!-- End ps2 h-->
 
-<!-- nes i -->
+<!-- ps2 i -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/i.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(i)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/i.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(i)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -287,13 +287,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes i-->
+<!-- End ps2 i-->
 
-<!-- nes j -->
+<!-- ps2 j -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/j.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(j)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/j.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(j)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -302,13 +302,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes j-->
+<!-- End ps2 j-->
 
-<!-- nes k -->
+<!-- ps2 k -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/k.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(k)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/k.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(k)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -317,13 +317,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes k-->
+<!-- End ps2 k-->
 
-<!-- nes l -->
+<!-- ps2 l -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/l.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(l)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/l.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(l)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -332,13 +332,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes l-->
+<!-- End ps2 l-->
 
-<!-- nes m -->
+<!-- ps2 m -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/m.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(m)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/m.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(m)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -347,13 +347,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes m-->
+<!-- End ps2 m-->
 
-<!-- nes n -->
+<!-- ps2 n -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/n.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(n)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/n.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(n)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -362,13 +362,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes n-->
+<!-- End ps2 n-->
 
-<!-- nes o -->
+<!-- ps2 o -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/o.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(o)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/o.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(o)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -377,13 +377,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes o-->
+<!-- End ps2 o-->
 
-<!-- nes p -->
+<!-- ps2 p -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/p.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(p)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/p.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(p)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -392,13 +392,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes p-->
+<!-- End ps2 p-->
 
-<!-- nes q -->
+<!-- ps2 q -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/q.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(q)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/q.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(q)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -407,13 +407,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes q-->
+<!-- End ps2 q-->
 
-<!-- nes r -->
+<!-- ps2 r -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/r.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(r)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/r.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(r)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -422,13 +422,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes r-->
+<!-- End ps2 r-->
 
-<!-- nes s -->
+<!-- ps2 s -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/s.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(s)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/s.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(s)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -437,13 +437,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes s-->
+<!-- End ps2 s-->
 
-<!-- nes t -->
+<!-- ps2 t -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/t.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(t)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/t.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(t)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -452,13 +452,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes t-->
+<!-- End ps2 t-->
 
-<!-- nes u -->
+<!-- ps2 u -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/u.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(u)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/u.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(u)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -467,13 +467,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes u-->
+<!-- End ps2 u-->
 
-<!-- nes v -->
+<!-- ps2 v -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/v.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(v)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/v.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(v)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -482,13 +482,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes v-->
+<!-- End ps2 v-->
 
-<!-- nes w -->
+<!-- ps2 w -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/w.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(w)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/w.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(w)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -497,13 +497,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes w-->
+<!-- End ps2 w-->
 
-<!-- nes x -->
+<!-- ps2 x -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/x.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(x)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/x.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(x)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -512,13 +512,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes x-->
+<!-- End ps2 x-->
 
-<!-- nes y -->
+<!-- ps2 y -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/y.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(y)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/y.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(y)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -527,13 +527,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes y-->
+<!-- End ps2 y-->
 
-<!-- nes z -->
+<!-- ps2 z -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/z.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(z)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/z.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128> <alph>(z)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -542,7 +542,7 @@
     </a>
     </ul>
 </li>
-<!-- End nes z-->
+<!-- End ps2 z-->
     
  <br></br><br></br></ul>
   </div>
